# SHIELD

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: small_model_inference.py
inference/: resnet50_cifar_inference.py  resnet50_imagenet128_inference.py  resnet50_imagenet256_inference.py  run_inference.sh
notebooks/: analyze_layers_logits.ipynb
src/palisade_he_cnn/: cnn_context.py  small_model.py
src/palisade_he_cnn/he_cnn/: linear.py  pool.py  utils.py
src/shield/: cnn_context.py  utils.py
src/shield/he_cnn/: activations.py  config.py  conv.py  upsample.py  utils.py
tests/: conftest.py  test_conv.py  test_gelu.py  test_integration.py  test_linear.py  test_pool.py
tests/fixtures/: small_model.pt  small_model_input.pt
training/: README.md  optuna_params.py  train_cifar10.py  train_resnet50_cifar.py  train_resnet9.py  train_resnetN.py  train_resnetN_optuna.py  train_resnets.py  train_resnets_optuna.py
training/models/: resnet50.py  resnet9.py  resnetN_multiplexed.py
training/utils/: utils.py  utils_dataloading.py  utils_kurtosis.py  utils_resnetN.py
