[tool.poetry]
name = "palisade_he_cnn"
version = "0.1.0"
description = ""
authors = [
    "Vikram Saraph <vikram.saraph@jhuapl.edu>",
    "Vivian Maloney <vivian.maloney@jhuapl.edu>",
    "Freddy Obrecht <freddy.obrecht@jhuapl.edu>",
    "Kate Tallaksen <kate.tallaksen@jhuapl.edu>",
    "Prathibha Rama <prathibha.rama@jhuapl.edu>"
]
readme = "README.md"
packages = [
    {include = "palisade_he_cnn"}
]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^1.13.1"
torchvision = "^0.14.1"
optuna = "^3.2.0"
joblib = "^1.3.2"
numpy = "<2.0.0"
openfhe = {url = "https://github.com/vhxs/SHIELD-core/releases/download/v1.0.5a0/openfhe-1.0.5a0-cp312-cp312-manylinux_2_34_x86_64.whl"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
